# kanjisearch

./: Cargo.toml  README.md  index.html  kanjidata.csv  styles.css  webdriver.json
src/: kanjidata.json  lib.rs
styles/: styles.css
tests/: web.rs
