[package]
name = "kanjisearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2.91"
serde-wasm-bindgen = "0.6.3"
wasm-bindgen-test = "0.3.41"
web-sys = "0.3.45"
js-sys = "0.3.68"


[lib]
crate-type = ["cdylib", "rlib"]
